ICE-8707 - Worked around IE9 hover bug. Made improvements to scrollable sizing in IE9 and IE8. Removed unnecessary horizontal scrollbar and ensure that right border of rightmost header and footer columns can be seen.

--- a/icefaces3/trunk/icefaces/ace/component/resources/icefaces.ace/datatable/datatable.css
+++ b/icefaces3/trunk/icefaces/ace/component/resources/icefaces.ace/datatable/datatable.css
@@ -187,6 +187,7 @@
 .ui-datatable-scrollable-body {
     overflow:auto;
     *position: relative; /* IE7 nested table positioning fix */
+    min-height: 0%; /* IE9 hover + scrolling error. description : http://blog.brianrichards.net/post/6721471926/ie9-hover-bug-workaround */
 }
 
 .ui-datatable-scrollable-footer {
